force-app/main/default/objects/Card_Tag__c/Card_Tag__c.object-meta.xml
<CustomObject>
    <description>This is for tagging or categorisation of cards</description>
    <label>Card Tag</label>
    <nameField>
        <displayFormat>CTID-{000000000}</displayFormat>
        <label>Card Tag ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Card Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>