force-app/main/default/objects/Card_Tag__c/fields/Board_Tag__c.field-meta.xml
<CustomField>
    <fullName>Board_Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Board Tag</label>
    <referenceTo>Board_Tags__c</referenceTo>
    <relationshipLabel>Card Tags</relationshipLabel>
    <relationshipName>Card_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>