force-app/main/default/objects/Card_Tag__c/fields/Tag_Colour__c.field-meta.xml
<CustomField>
    <fullName>Tag_Colour__c</fullName>
    <formula>TEXT(Board_Tag__r.Colour__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tag Colour</label>
    <type>Text</type>
</CustomField>