force-app/main/default/objects/Card_Tag__c/fields/Tag_Name__c.field-meta.xml
<CustomField>
    <fullName>Tag_Name__c</fullName>
    <formula>Board_Tag__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tag Name</label>
    <type>Text</type>
</CustomField>